Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/TM_Data_Record__c.object-meta.xml
<CustomObject>
    <description>Used for Inside Sales</description>
    <label>TM Data</label>
    <nameField>
        <displayFormat>TM-{0000000}</displayFormat>
        <label>TM Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TM Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>