Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address 1</label>
    <length>32</length>
    <type>Text</type>
</CustomField>