Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>