Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Consumable__c.field-meta.xml
<CustomField>
    <fullName>Consumable__c</fullName>
    <label>Consumable $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>