Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>8</length>
    <type>Text</type>
</CustomField>