Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Customer_Base_Num__c.field-meta.xml
<CustomField>
    <fullName>Customer_Base_Num__c</fullName>
    <label>Customer Base Num</label>
    <length>12</length>
    <type>Text</type>
</CustomField>