Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Customer_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Contacted</label>
    <type>Checkbox</type>
</CustomField>