Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Cutomer_Base_Name__c.field-meta.xml
<CustomField>
    <fullName>Cutomer_Base_Name__c</fullName>
    <label>Cutomer Base Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>