Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <length>12</length>
    <type>Text</type>
</CustomField>