Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>