Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Gross__c.field-meta.xml
<CustomField>
    <fullName>Gross__c</fullName>
    <label>Gross $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>