Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/IGOR__c.field-meta.xml
<CustomField>
    <fullName>IGOR__c</fullName>
    <label>IGOR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>