Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/IGOR_Irem_Class_Desc__c.field-meta.xml
<CustomField>
    <fullName>IGOR_Irem_Class_Desc__c</fullName>
    <label>IGOR Irem Class Desc</label>
    <length>32</length>
    <type>Text</type>
</CustomField>