Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice #</label>
    <length>12</length>
    <type>Text</type>
</CustomField>