Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/List_Num__c.field-meta.xml
<CustomField>
    <fullName>List_Num__c</fullName>
    <label>List Num</label>
    <length>32</length>
    <type>Text</type>
</CustomField>