Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Local_Acct_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Acct_Name__c</fullName>
    <label>Local Acct. Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>