Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Minor_Accessory__c.field-meta.xml
<CustomField>
    <fullName>Minor_Accessory__c</fullName>
    <label>Minor Accessory $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>