Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <length>12</length>
    <type>Text</type>
</CustomField>