Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Net__c.field-meta.xml
<CustomField>
    <fullName>Net__c</fullName>
    <label>Net $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>