Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>12</length>
    <type>Text</type>
</CustomField>