Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <length>8</length>
    <type>Text</type>
</CustomField>