Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <label>Promo Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>