Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/SKU_Description__c.field-meta.xml
<CustomField>
    <fullName>SKU_Description__c</fullName>
    <label>SKU Description</label>
    <length>32</length>
    <type>Text</type>
</CustomField>