Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Sold_To_Fax__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Fax__c</fullName>
    <label>Sold To Fax</label>
    <length>12</length>
    <type>Text</type>
</CustomField>