Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Sold_To_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Phone__c</fullName>
    <label>Sold To Phone</label>
    <length>12</length>
    <type>Text</type>
</CustomField>