Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Sold_To_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Zip_Code__c</fullName>
    <label>Sold To Zip Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>