Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>4</length>
    <type>Text</type>
</CustomField>