Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Total_AA__c.field-meta.xml
<CustomField>
    <fullName>Total_AA__c</fullName>
    <label>Total AA$</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>