Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/X12M_Sales__c.field-meta.xml
<CustomField>
    <fullName>X12M_Sales__c</fullName>
    <label>12M Sales $</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>