Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>