Perkin-UAT/force-app/main/default/objects/TM_Data_Record__c/listViews/ARQ_000739_TM_Data_Record.listView-meta.xml
<ListView>
    <fullName>ARQ_000739_TM_Data_Record</fullName>
    <filterScope>Queue</filterScope>
    <label>SupportGroup</label>
    <queue>ARQ_000670</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>